# universal-judge

./: .editorconfig  .gitignore  CITATION.cff  LICENSE  Pipfile  README.md  benchmarks.json  benchmarks_io.json  comparator.py  config.json  convert.py  dependencies.md  flake.nix  flake.old.nix  judge.py  jupyter.py  lgtm.yml  pyproject.toml  pytest.ini  readme.md  requirements-test.txt  requirements.txt  run  run-locally.ps1  tested.py  testplan.py  tsconfig.json
.devcontainer/: dev-dependencies.sh  devcontainer.json  dodona-tested.dockerfile  main.sh
.github/: codeql.yml  dependabot.yml  dodona-image-integration.dockerfile  dodona-image.dockerfile
benchmarking/: __init__.py  __main__.py  statistics.py  statistics_io.py
descriptions/: demo.md.mako  erfgenaam.md.mako  spoorhekcodering.html.mako
docker/: build.ps1  build.sh  dodona-kernel.dockerfile  dodona-tested.dockerfile
dodona/: common.py  dodona.py  full_output.py  partial_output.py
dsl/: .editorconfig  internal.json  internal.yaml  settings.gradle
dsl-examples/: dsl-full.yaml  dsl-schema.json  erfgenaam-simple.yaml  erfgenaam.yaml  hoe-slim-ben-jij.yaml  statement.ebnf  value.ebnf  yaml.md
excercise/: basic.json  correctheid.out  data  plan.groovy  test.in  test.java  test.js  test.out  test.py  test.r
executors/: inout.py  jupyter.py  kernel.py
exercise/: advanced.json  basic.json  custom_evaluator.jsh  custom_evaluator.py  dirconfig.json  plan.groovy  plan.json  plan_simple.groovy  plano.groovy  readme.md  specific_evaluator.py  test.hs  test.java  test.py
gDSL/: build.gradle
judge/: .editorconfig  .gitignore  c-language.ipynb  comparator.py  dodona.py  evaluators.py  features.py  functies.md  judge.py  manual.py  readme.md  requirements-test.txt  requirements.txt  results.txt  serialisation.py  tested.py  testplan.py  utils.py
lotto/: correct.py  evaluator.py  generator.py  plan.json
prototype/: INSTALL.md  bound.py  dodona_exercise.py  exercise.py  global_alignment_exercise.py  global_alignment_local_exercise.py  global_alignment_local_exercise_controlled.py  jupyter.py  log_search.py  log_search_exercise.py  memory_profiler.py  my_func.py  plot_confidences.py  plot_memory_generic.py  plot_memory_python.py  requirements.txt  run_experiment.py  runtime_metrics.py  stable_marriage_exercise.py
specs/: complete.json  partial.json
tested/: __init__.py  __main__.py  cli.py  configs.py  description_instance.py  dodona.py  dsl.py  features.py  instantiate_exercise.py  internal_timings.py  main.py  manual.py  nat_translation.py  parsing.py  serialisation.py  testplan.py  testsuite.py  timings.py  transform_json.py  translate_description.py  translate_dsl.py  utils.py
tests/: conftest.py  language_markers.py  manual_utils.py  partial_output.json  testJavascriptAstParserFile.js  testTypeScriptAstParserFile.ts  test_cli_args.py  test_collector.py  test_dsl.py  test_dsl_expression.py  test_dsl_legacy.py  test_dsl_yaml.py  test_evaluators.py  test_file_linking.py  test_functionality.py  test_i18n.py  (+35 more)
(+2297 files in other folders)
