[tool.isort]
profile = "black"
skip_glob = ["tests/exercises/*"]

[tool.pylint.format]
max-line-length = "88"

[tool.black]
line-length = 88
extend-exclude="tests/exercises/*"

[tool.pytest.ini_options]
markers = [
    "haskell", # Run the haskell tests
    "linter", # Run linter tests
    "slow", # Slow tests
]

[tool.poetry]
name = "tested"
version = "1.0.0"
description = ""
authors = ["Niko Strijbol <strijbol.niko@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
tested = "tested.__main__:__main__"

[tool.poetry.dependencies]
python         = "^3.11"
psutil         = "==5.9.5"
attrs          = "==22.2.0"
cattrs         = "==23.1.2"
jsonschema     = "==4.18.4"
typing-inspect = "==0.9.0"
pyyaml         = "==6.0.1"
pygments       = "==2.15.1"
python-i18n    = "==0.3.9"
pylint         = "==2.17.1"
jinja2         = "==3.1.3"
marko          = "==2.0.0"

[tool.poetry.group.dev.dependencies]
pytest         = "^8.2.1"
pytest-mock    = "^3.14.0"
pytest-cov     = "^5.0.0"
pytest-xdist   = "^3.6.1"
black          = "^24.4.2"
isort          = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
