[tool.isort]
profile = "black"
skip_glob = ["tests/exercises/*"]

[tool.pylint.format]
max-line-length = "88"

[tool.black]
line-length = 88
extend-exclude="tests/exercises/*"

[tool.pytest.ini_options]
addopts = "--ignore=tests/test_integration_javascript.py"
markers = ["haskell"]

[tool.pyright]
exclude = ["tests/exercises/", "tests/snapshots/", "tests/descriptions/"]

[tool.poetry]
name = "tested"
version = "1.0.0"
description = ""
authors = ["Niko Strijbol <strijbol.niko@gmail.com>"]
license = "MIT"
readme = "README.md"
